# pkv-sync

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-Hant.md  SECURITY.ja.md  SECURITY.ko.md  SECURITY.md  SECURITY.zh-CN.md  SECURITY.zh-Hant.md  config.example.toml  docker-compose.yml  package.json
deploy/: pkv-sync.service
plugin/: esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  versions.json  vitest.config.mts
public-docs/: COVERAGE.ja.md  COVERAGE.ko.md  COVERAGE.md  COVERAGE.zh-CN.md  COVERAGE.zh-Hant.md  admin-manual.ja.md  admin-manual.ko.md  admin-manual.md  (+53 more)
server/: Cargo.toml
server/migrations/: 0001_initial.sql  0002_admin_sessions.sql  0002_runtime_update_check.sql  0003_idempotency_scope.sql  0004_token_device_id.sql  0005_invites_user_delete_actions.sql  0006_token_expires_at.sql  0007_sync_activity_token_delete_action.sql  0008_history_diff_flags.sql  0009_runtime_extra_exclude_globs.sql  0010_sse_runtime_flags.sql  0011_git_smart_http_flag.sql  0012_vault_settings.sql  0013_blob_uploads.sql  0014_metrics_runtime_flag.sql  0015_idempotency_vault_route_pk.sql  0016_auto_merge_flag.sql  0017_vault_user_name_unique.sql
server/src/: cli.rs  config.rs  error.rs  human.rs  keygen.rs  lib.rs  logging.rs  main.rs  server.rs  time.rs  version.rs
server/src/admin/: csrf.rs  handlers.rs  i18n.rs  mod.rs  password.rs  session.rs  system.rs  templates.rs
server/src/api/: auth.rs  config.rs  error.rs  git_http.rs  health.rs  me.rs  metrics.rs  mod.rs  plugin_manifest.rs  vault_settings.rs  vaults.rs
server/src/api/admin/: invites.rs  mod.rs  system.rs  users.rs
server/src/auth/: extractor.rs  git_basic.rs  mod.rs  password.rs  rate_limit.rs  token.rs
server/src/cli/: backup.rs  materialize.rs  mod.rs  restore.rs  upgrade.rs  verify.rs
server/src/db/: mod.rs  pool.rs
server/src/db/repos/: activity.rs  blob_ref.rs  blob_upload.rs  idempotency.rs  invite.rs  mod.rs  runtime_config.rs  token.rs  user.rs  vault.rs  vault_settings.rs
server/src/mcp/: auth.rs  mod.rs  notifications.rs  tools.rs  transport_http.rs  transport_stdio.rs
server/src/middleware/: deployment_key.rs  mod.rs  rate_limit.rs  real_ip.rs  request_id.rs  ua_filter.rs
server/src/service/: auth.rs  background.rs  cleanup.rs  diff.rs  events.rs  exclude.rs  gc.rs  history.rs  merge.rs  metrics.rs  mod.rs  state.rs  sync.rs  update_check.rs  upgrade_signal.rs  vault.rs  vault_settings.rs
server/src/service/sync/: blobs.rs  events.rs  merge_apply.rs  mod.rs  paths.rs  pull.rs  push.rs  reconcile.rs
server/src/storage/: blob.rs  git.rs  lock.rs  mod.rs  path.rs  text_kind.rs
server/static/: admin.css  admin.js
server/templates/: activity.html  dashboard.html  devices.html  invites.html  layout.html  login.html  settings.html  setup.html  user_detail.html  users.html  vault_diff.html  vault_file_view.html  vault_files.html  vault_history.html  vault_settings.html  vaults.html
server/tests/: admin_vault_rollback.rs  admin_vault_settings.rs  admin_web.rs  auth_e2e.rs  auto_merge_integration.rs  cli_upgrade.rs  cli_user_smoke.rs  dot_obsidian_sync_regression.rs  exclude_push_e2e.rs  git_smart_http.rs  integration_smoke.rs  materialize_cli.rs  mcp_embed_serve.rs  mcp_http_tools.rs  mcp_stdio_tools.rs  mcp_tools.rs  mcp_write_tools.rs  merge_three_way.rs  metrics_exposition.rs  migrate_test.rs  ops_cli.rs  plugin_manifest.rs  runtime_config_excludes.rs  setup_wizard.rs  sse_cors_preflight.rs  sse_http_endpoint.rs  sse_last_event_id.rs  sse_per_user_cap.rs  sse_push_notify.rs  sync_e2e.rs  token_renewal.rs  update_check.rs  vault_rollback.rs  vault_settings_api.rs
(+105 files in other folders)
