[workspace]
resolver = "2"
members = ["server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["cyberkurry <cyberkurry@outlook.com>"]
repository = "https://github.com/cyberkurry/pkv-sync"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
regex = "1"
subtle = "2"
ipnet = { version = "2", features = ["serde"] }
once_cell = "1"
